greeting-service/src/main/fabric8/dc.yml
apiVersion: v1
kind: DeploymentConfig
spec:
  triggers:
    # If we add these lines, then istio enricher will be able to include all the triggers !!!!!
    - type: ConfigChange
