greeting-service/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
spec:
  template:
    spec:
      containers:
      - livenessProbe:
          failureThreshold: 2
          initialDelaySeconds: 60
          periodSeconds: 3
          successThreashold: 1
          timeoutSeconds: 1
          exec:
            command:
            - curl
            - http://localhost:8080/health
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreashold: 1
          timeoutSeconds: 1
          exec:
            command:
            - curl
            - http://localhost:8080/health
        resources:
          limits:
            memory: "300Μi"
